@startuml RaizesDoNordeste
    class Usuario{
        -Long id
        -String cpf
        -String nome
        -LocalDate dataNascimento
        -String email
        -String telefone
        -String senha
        -String genero
        -int pontosFidelidade
        -Perfil[] perfis
        -Endereco[] enderecos
        -ConsentimentoLgpd[] consentimentos
        -Pedido[] pedidos

        +alterarInformacoes()
    }
    class Perfil{
        -Long id
        -String nome
        -String descricao
        -Usuario[] usuarios
    }
    class Pedido{
        -Long id
        -LocalDateTime dataPedido
        -String statusPedido
        -String canalOrigem
        -String formaEntrega
        -BigDecimal valorEntrega
        -int prazoEstimado
        -BigDecimal desconto
        -BigDecimal valorTotal
        -String observacoes
        -Usuario usuario
        -Unidade unidade
        -ItemPedido[] itensPedido
        -Pagamento[] pagamentos

        +adicionarItem()
        +removerItem()
        +calcularTotalProdutos()
        +calcularValorTotal()
        +calcularPrazoEntrega()
    }
    class Pagamento{
        -Long id
        -String metodoPagamento
        -String statusPagamento
        -BigDecimal valor
        -LocalDateTime dataPagamento
        -Pedido pedido

        +validarPagamento()
    }
    class ItemPedido{
        -Long id
        -int quantidade
        -BigDecimal subtotal
        -String statusProduto
        -Produto produto
        -Pedido pedido

        +BigDecimal calcularSubtotal()
    }
    class Produto{
        -Long id 
        -String nome
        -String descricao
        -String categoria
        -BigDecimal precoBase
        -boolean exigePreparo
        -boolean ativo
        -IngredienteProduto[] ingredientesProduto
        -EstoqueProduto[] estoquesProdutos
        -ProdutoCardapio[] produtosCardapio
        -ItemPedido[] itensPedido

    }
    class IngredienteProduto{
        -Long id
        -double quantidade
        -Ingrediente ingrediente
        -Produto produto
    }
    class Ingrediente{
        -Long id
        -String nome
        -String unidadeMedida
        -IngredienteProduto[] ingredientesProduto
        -EstoqueIngrediente[] estoquesIngredientes
    }
    class Unidade{
        -Long id
        -String nome
        -String cnpj
        -String telefone
        -Endereco endereco
        -RegiaoComercial regiao
        -EstoqueProduto[] estoquesProdutos
        -EstoqueIngrediente[] estoquesIngredientes
        -Cardapio[] cardapios
        -Pedido[] pedidos
    }
    class EstoqueProduto{
        -Long id
        -int quantidadeAtual
        -int quantidadeMinima
        -Unidade unidade
        -Produto produto

        +String baixarEstoque()
        +recarregarEstoque()
        +String abaixoDoMinimo()
    }
    class EstoqueIngrediente{
        -Long id
        -double quantidadeAtual
        -double quantidadeMinima
        -Unidade unidade
        -Ingrediente ingrediente

        +String baixarEstoque()
        +recarregarEstoque()
        +String abaixoDoMinimo()
    }
    class Cardapio{
        -Long id
        -String nome
        -String descricao
        -boolean ativo
        -Unidade unidade
        -ProdutoCardapio[] produtosCardapio

        +adicionarProduto()
        +retirarProduto()
    }
    class ProdutoCardapio{
        -Long id
        -boolean disponivel
        -Cardapio cardapio
        -Produto produto
    }
    class ConsentimentoLgpd{
        -Long id
        -boolean aceito
        -LocalDateTime dataAceite
        -Usuario usuario
        
        +fornecerConsentimento()
    }
    class Endereco{
        -Long id
        -String cep
        -String logradouro
        -String numero
        -String complemento
        -String bairro
        -String cidade
        -String estado
        -boolean principal
        -Usuario usuario
        -Unidade unidade

        +alterarEndereco()
    }
    class RegiaoComercial{
        -Long id
        -String nome
        -Unidade[] unidades
    }

    Usuario "0..*" -- "1..*" Perfil : possui
    Usuario "1" -- "0..*" ConsentimentoLgpd : fornece
    Usuario "1" -- "0..*" Endereco : reside
    Usuario "1" -- "0..*" Pedido : realiza
    Unidade "1" -- "0..*" Pedido : atende
    Unidade "1" *-- "0..*" EstoqueProduto : possui
    Unidade "1" *-- "0..*" EstoqueIngrediente : possui
    EstoqueProduto "0..*" -- "1" Produto : contem
    EstoqueIngrediente "0..*" -- "1" Ingrediente : contem
    Pedido "1" *-- "1..*" ItemPedido : possui
    Pedido "1" -- "0..*" Pagamento : tem
    ItemPedido "0..*" -- "1" Produto : contem
    Produto "1" *-- "0..*" IngredienteProduto : composto por
    IngredienteProduto "0..*" -- "1" Ingrediente
    Unidade "0..*" -- "1" RegiaoComercial : faz parte de
    Unidade "1" -- "1" Endereco : localizada em
    Unidade "1" -- "1..*" Cardapio : possui
    Cardapio "1" *-- "0..*" ProdutoCardapio :  composto por
    ProdutoCardapio "0..*" -- "1" Produto : contem
@enduml